# django-react-graphql

backend/: .gitignore  pyproject.toml
backend/authentication/: admin.py  models.py  schema.py  types.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_user_email_favoritebook.py
backend/book/: admin.py  models.py  mutation.py  schema.py  types.py  views.py
backend/book/migrations/: 0001_initial.py
backend/core/: schema.py  settings.py  urls.py
frontend/: package.json
frontend/src/: App.jsx  main.jsx
frontend/src/mutations/: book.js  user.js
frontend/src/query/: book.js  user.js
frontend/src/store/: user.js
