[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexander <asashek@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
graphene-django = "^2.15.0"
Pillow = "^9.1.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
